2007-03-21  Konstantin Triger <kostat@mainsoft.com>

	* ConformanceChecker.cs, BasicProfileChecker.cs: enable looking the
		documents up by namespace.

2007-03-11  Konstantin Triger <kostat@mainsoft.com>

	* ConformanceChecker.cs, WebServicesInteroperability.cs, ProtocolReflector.cs,
		BasicProfileChecker.cs: fix validation of the R2401 rule.

2007-03-11  Konstantin Triger <kostat@mainsoft.com>

	* ServiceDescriptionFormatExtensionCollection.cs: make FindAll(Type)
		consistent with Find(Type).

2007-02-28  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDescriptionSerializeBase2.cs : regenerated with the latest
	  genxs.

2007-02-28  Konstantin Triger <kostat@mainsoft.com>

	* ProtocolReflector.cs: emit conformance claims when required.

2007-02-27  Konstantin Triger <kostat@mainsoft.com>

	* DocumentableItem.cs: consider empty string as nothing for documentation.

2007-02-06  Konstantin Triger <kostat@mainsoft.com>

	* ProtocolReflector.cs: Ensure the schemas are available for validation.

2007-02-01  Konstantin Triger <kostat@mainsoft.com>

	* ProtocolReflector.cs: throw if not conformant, but declared to be.

2007-01-25  Konstantin Triger <kostat@mainsoft.com>

	* ServiceDescriptionReflector.cs: describe only supported bindings and
		never HttpPostLocalhost.

2007-01-19  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDescriptionImporter.cs : initialize CodeGenerator with C#.
	* SoapProtocolImporter.cs : use XmlMemberMapping.GenerateTypeName()
	  instead of TypeFullName for 2.0 nullable support. Fixed bug #80551.

2006-12-18  Atsushi Enomoto  <atsushi@ximian.com>

	* ProtocolReflector.cs, SoapProtocolReflector.cs,
	  ServiceDescriptionReflector.cs :
	  When both SOAP 1.1 and 1.2 bindings are to be imported, it should
	  not emit identical Messages and schema types twice. Hence SOAP
	  reflector now skips duplicates.

2006-12-15  Atsushi Enomoto  <atsushi@ximian.com>

	* SoapExtensionReflector.cs, SoapProtocolReflector.cs :